welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:5: error: Unmatched closing brace '}' ignored here
			nbvalue=nbvalue+1}
                                         ^occurrences:11: error: Unmatched closing brace '}' ignored here
 }
 ^